gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tadoku
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "true"
spec:
  rules:
    - http:
        paths:
          - path: /reading-contest
            pathType: Prefix
            backend:
              service:
                name: reading-contest-api
                port:
                  number: 4000
          - path: /identity
            pathType: Prefix
            backend:
              service:
                name: identity-api
                port:
                  number: 4000
          - path: /blog
            pathType: Prefix
            backend:
              service:
                name: blog-api
                port:
                  number: 8080
